--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,29 @@
 {
-    "name": "YunoHost example app",
-    "id": "ynhexample",
+    "name": "Rocket Chat for Yunohost",
+    "id": "ynh_rocket_chat",
     "packaging_format": 1,
     "description": {
-        "en": "Example package for YunoHost application.",
-        "fr": "Exemple de package d’application pour YunoHost."
+        "en": "Slack like application for YunoHost.",
+        "fr": "Application type Slack pour Yunohost."
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "version": "0.74.2~ynh1",
+    "url": "https://rocket.chat/",
     "license": "free",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com",
-        "url": "http://example.com"
+        "name": "Brawcks",
+        "email": "contact@tiktakweb.fr",
+        "url": "https://tiktakweb.fr"
     },
     "requirements": {
-        "yunohost": ">= 2.7.14"
+        "yunohost": ">= 3.0.0",
+        "mongodb-org": ">= 3.6",
+        "nodejs": ">= 8.11.3"
     },
-    "multi_instance": true,
+    "multi_instance": false,
     "services": [
         "nginx",
-        "php7.0-fpm",
-        "mysql"
+        "nodejs",
+        "mongodb"
     ],
     "arguments": {
         "install" : [
@@ -29,17 +31,17 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for ynhexample",
-                    "fr": "Choisissez un nom de domaine pour ynhexample"
+                    "en": "Choose a domain name for Rocket Chat",
+                    "fr": "Choisissez un nom de domaine pour Rocket Chat"
                 },
-                "example": "example.com"
+                "example": "yourdomain.com"
             },
             {
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for ynhexample",
-                    "fr": "Choisissez un chemin pour ynhexample"
+                    "en": "Choose a path for Rocket Chat",
+                    "fr": "Choisissez un chemin pour Rocket Chat"
                 },
                 "example": "/example",
                 "default": "/example"
@@ -68,7 +70,7 @@
                     "en": "Choose the application language",
                     "fr": "Choisissez la langue de l'application"
                 },
-                "choices": ["fr", "en"],
+                "choices": ["fr"],
                 "default": "fr"
             },
             {
